# PriceRadarApp

./: .env.example  .gitignore  README.md  pyproject.toml  requests.http
app/: __init__.py  config.py  database.py  main.py  models.py  repositories.py  services.py
scripts/: seed_products.py
tests/: test_main.py
